# SynapseOS

./: .gitignore  AGENTS.md  CONTEXT.md  ERROR_LOG.md  PENDING_LOG.md  README.md  RUN_REPORT.md  SECURITY_AUDIT_REPORT.md  SPEC.md  compose.copilot.yaml  compose.dev.yaml  main.py  memory.md  pyproject.toml
.aignt-os/runs/: runs.sqlite3
.aignt-os/runtime/: adapter-circuit-breakers.json
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: commit-msg  pre-commit
.github/: copilot-instructions.md
.github/copilot/: setup-steps.yml
.github/instructions/: ci.instructions.md  python.instructions.md  spec.instructions.md  tests.instructions.md
.github/workflows/: container-build.yml  operational-ci.yml  runtime-integration.yml
architecture/: IMPLEMENTATION_STACK.md  SPEC_FORMAT.md  SPEC_TEMPLATE_v2.md  WORKTREE_FEATURES.md
docs/: IDEAS.md
docs/adr/: 001-cli-orchestration.md  002-python-orchestrator.md  003-state-machine-pipeline-engine.md  004-cli-adapter-layer.md  005-semantic-memory.md  006-regex-based-parsing.md  007-local-llms-offline-reasoning.md  008-spec-driven-development.md  009-runtime-dual-cli-worker.md  010-adopt-aignt-synapse-flow-name.md  011-lightweight-docker-preflight-default.md  015-plugin-system.md  (+1 more)
features/: init_feature_worktrees.sh
memory/: MEMORY.md  active_fronts.md  handoff.md  next_steps.md  pitfalls.md  project_state.md  stable_decisions.md
scripts/: commit-check.sh  dev-codex.sh  dev-copilot.sh  docker-preflight.sh  install-git-hooks.sh  security-gate.sh  validate-branch.sh  validate-commit-message.sh
(+185 files in other folders)
