[project]
name = "aignt-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "jsonschema>=4.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-statemachine>=3.0.0",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.5",
]
